--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-AWS_SECRET_KEY=dfg
-AWS_ACCESS_KEY=sdf
-AWS_BUCKET=asdf
-FILE_DIRECTORY=/Users/acelingo/programming/job_app/aws_upload/tests/testdir
+AWS_SECRET_KEY=''
+AWS_ACCESS_KEY= ''
+AWS_BUCKET=''
+FILE_DIRECTORY=/Users/acelingo/programming/job_app/directory_uploader/tests/testdir
 MAX_WORKERS=3
 MAX_MEMORY_USE=.25
